# ai_reciger

./: index.html  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs  recipe.rs  types.rs
backend/src/ai/: mod.rs
backend/src/db/: mod.rs  recipe.rs  user.rs
backend/src/handlers/: auth.rs  mod.rs  recipe.rs  user.rs
src/: App.css  App.tsx  main.tsx  store.tsx
src/actions/: loading.tsx  modal.tsx  recipe.tsx  toast.tsx  types.tsx  user.tsx
src/components/: LoadingButton.tsx
src/layout/: AI.tsx  Confirm.tsx  Dashboard.tsx  Landing.tsx  Loading.tsx  Login.tsx  Navbar.tsx  Recipe.tsx  Register.tsx
src/reducers/: alert.tsx  index.tsx  loading.tsx  modal.tsx  recipe.tsx  toast.tsx  user.tsx
src/types/: Alert.ts  Modal.ts  Motion.ts  Recipe.ts  State.ts  Toast.tsx  User.ts
src/utils/: ProtectedRoutes.tsx  printPage.tsx
