[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.25", features = ["full"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0"
openai_dive = "0.4.5"
dotenv = "0.15.0"
actix-web = "4.5.1"
sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio", "json"]}
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
chrono = {version = "0.4.35", features = ["serde"]}
actix-cors = "0.7.0"

